--- a/payment/cart-payment.html
+++ b/payment/cart-payment.html
@@ -128,8 +128,15 @@
           background-color: #e9200b!important;
           border-color: #FF7622!important;
           border-radius: 0%!important;
-      }
-            @media screen and (orientation:landscape) {
+    }
+    .ui-page-theme-a .ui-bar-inherit {
+      background-color: #ffffff!important;
+      border-color: azure!important;
+      color: #333333!important;
+      text-shadow: 0 1px 0 #eeeeee!important;
+      font-weight: bold!important;
+    }
+    @media screen and (orientation:landscape) {
         .edit-one {
             position: relative!important;
             top: 14px!important;
@@ -170,17 +177,19 @@
   </style>
   <body>
     <div class="p-1">
+      <div data-role="header" data-position="fixed">
         <div class="ui-grid-a">
           <div class="ui-block-a">
               <label for="text-basic">
                 <div class="ui-alt-icon">
-                  <a href="productDetails.html" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">Cart</a>
+                  <a onclick="history.back()" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">Cart</a>
                   <div class="cart-description">Cart</div>
                 </div>
               </label>
           </div>
           <div class="ui-block-b"><div class="ui-bar ui-bar edit-one"></div></div>
         </div>
+      </div>
         <br>
         <br>
     </div>
