--- a/home.html
+++ b/home.html
@@ -337,17 +337,16 @@
       </div>
     </div>
     <div data-role="footer" data-position="fixed">
-        <div data-role="navbar" >
+        <div data-role="navbar">
           <ul>
-            <li><a href="home.html" class="ui-btn-active border" target="_self" data-transition="slide"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
-            <li><a href="profile.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
-            <li><a href="cart.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
-            <li><a href="./qr/index.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
+            <li><a target="_self" class="border ui-btn-active ui-state-persist"  data-transition="slide" href="home.html"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
+            <li><a target="_self" class="border "  data-transition="slide" href="profile.html"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
+            <li><a target="_self" class="border"  data-transition="slide" href="cart.html"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
+            <li><a target="_self" class="border"  data-transition="slide" href="./qr/index.html"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
           </ul>
         </div>
     </div>
   </div>   
-
 <div data-role="page" id="resturant1">
   <div class="p-1">
       <div data-role="header" data-position="fixed">
@@ -430,16 +429,14 @@
       </div>
   </div>
   <div data-role="footer" data-position="fixed">
-    <div data-role="header">
-      <div data-role="navbar" >
-        <ul>
-          <li><a href="home.html" class="ui-btn-active border" target="_self" data-transition="slide"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="profile.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="cart.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="#" class="border" target="_self" data-transition="slide"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
-        </ul>
-      </div>
-    </div> 
+    <div data-role="navbar">
+      <ul>
+        <li><a target="_self" class="border"  data-transition="slide" href="home.html"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
+        <li><a target="_self" class="border"  data-transition="slide" href="profile.html"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
+        <li><a target="_self" class="border"  data-transition="slide" href="cart.html"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
+        <li><a target="_self" class="border"  data-transition="slide" href="./qr/index.html"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
+      </ul>
+    </div>
   </div>
 </div><!-- /page -->
 
@@ -527,16 +524,14 @@
       </div>
   </div>
   <div data-role="footer" data-position="fixed">
-    <div data-role="header">
-      <div data-role="navbar" >
-        <ul>
-          <li><a href="home.html" class="ui-btn-active border" target="_self" data-transition="slide"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="profile.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="cart.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="#" class="border" target="_self" data-transition="slide"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
-        </ul>
-      </div>
-    </div> 
+    <div data-role="navbar">
+      <ul>
+        <li><a target="_self" class="border"  data-transition="slide" href="home.html"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
+        <li><a target="_self" class="border"  data-transition="slide" href="profile.html"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
+        <li><a target="_self" class="border"  data-transition="slide" href="cart.html"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
+        <li><a target="_self" class="border"  data-transition="slide" href="./qr/index.html"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
+      </ul>
+    </div>
   </div>
 </div><!-- /page -->
 
@@ -622,16 +617,14 @@
       </div>
   </div>
   <div data-role="footer" data-position="fixed">
-    <div data-role="header">
-      <div data-role="navbar" >
-        <ul>
-          <li><a href="home.html" class="ui-btn-active border" target="_self" data-transition="slide"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="profile.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="cart.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="#" class="border" target="_self" data-transition="slide"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
-        </ul>
-      </div>
-    </div> 
+    <div data-role="navbar">
+      <ul>
+        <li><a target="_self" class="border"  data-transition="slide" href="home.html"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
+        <li><a target="_self" class="border"  data-transition="slide" href="profile.html"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
+        <li><a target="_self" class="border"  data-transition="slide" href="cart.html"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
+        <li><a target="_self" class="border"  data-transition="slide" href="./qr/index.html"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
+      </ul>
+    </div>
   </div>
 </div><!-- /page -->
 
@@ -717,16 +710,14 @@
       </div>
   </div>
   <div data-role="footer" data-position="fixed">
-    <div data-role="header">
-      <div data-role="navbar" >
-        <ul>
-          <li><a href="home.html" class="ui-btn-active border" target="_self" data-transition="slide"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="profile.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="cart.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="#" class="border" target="_self" data-transition="slide"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
-        </ul>
-      </div>
-    </div> 
+    <div data-role="navbar">
+      <ul>
+        <li><a target="_self" class="border"  data-transition="slide" href="home.html"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
+        <li><a target="_self" class="border"  data-transition="slide" href="profile.html"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
+        <li><a target="_self" class="border"  data-transition="slide" href="cart.html"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
+        <li><a target="_self" class="border"  data-transition="slide" href="./qr/index.html"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
+      </ul>
+    </div>
   </div>
 </div><!-- /page -->
 
@@ -812,16 +803,14 @@
       </div>
   </div>
   <div data-role="footer" data-position="fixed">
-    <div data-role="header">
-      <div data-role="navbar" >
-        <ul>
-          <li><a href="home.html" class="ui-btn-active border" target="_self" data-transition="slide"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="profile.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="cart.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="#" class="border" target="_self" data-transition="slide"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
-        </ul>
-      </div>
-    </div> 
+    <div data-role="navbar">
+      <ul>
+        <li><a target="_self" class="border"  data-transition="slide" href="home.html"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
+        <li><a target="_self" class="border"  data-transition="slide" href="profile.html"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
+        <li><a target="_self" class="border"  data-transition="slide" href="cart.html"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
+        <li><a target="_self" class="border"  data-transition="slide" href="./qr/index.html"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
+      </ul>
+    </div>
   </div>
 </div><!-- /page -->
 
@@ -907,16 +896,14 @@
       </div>
   </div>
   <div data-role="footer" data-position="fixed">
-    <div data-role="header">
-      <div data-role="navbar" >
-        <ul>
-          <li><a href="home.html" class="ui-btn-active border" target="_self" data-transition="slide"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="profile.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="cart.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="#" class="border" target="_self" data-transition="slide"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
-        </ul>
-      </div>
-    </div> 
+    <div data-role="navbar">
+      <ul>
+        <li><a target="_self" class="border"  data-transition="slide" href="home.html"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
+        <li><a target="_self" class="border"  data-transition="slide" href="profile.html"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
+        <li><a target="_self" class="border"  data-transition="slide" href="cart.html"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
+        <li><a target="_self" class="border"  data-transition="slide" href="./qr/index.html"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
+      </ul>
+    </div>
   </div>
 </div><!-- /page -->
 </body>
