--- a/favourite/favourite-list.html
+++ b/favourite/favourite-list.html
@@ -152,16 +152,14 @@
     </div>
 </div>
 <div data-role="footer" data-position="fixed">
-    <div data-role="header">
-      <div data-role="navbar" >
+    <div data-role="navbar">
         <ul>
-          <li><a href="" class="ui-btn-active border" target="_self" data-transition="slide"><img src="../assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="#" class="border" target="_self" data-transition="slide"><img src="../assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="cart.html" class="border" target="_self" data-transition="slide"><img src="../assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a href="#" class="border" target="_self" data-transition="slide"><img src="../assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
+          <li><a target="_self" class="border"  data-transition="slide" href="../home.html"><img src="../assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
+          <li><a target="_self" class="border"  data-transition="slide" href="../profile.html"><img src="../assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
+          <li><a target="_self" class="border"  data-transition="slide" href="../cart.html"><img src="../assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
+          <li><a target="_self" class="border"  data-transition="slide" href="../qr/index.html"><img src="../assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
         </ul>
-      </div>
-    </div> 
+    </div>
   </div>
 </body>
 </html>
