--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
       border: none!important;
     }
     .pen {
-      height: 150px;
+      height: 188px;
       border-radius: 1.3rem!important;
     }
     .font {
@@ -134,6 +134,8 @@
     }
     .pen-to {
       border-radius: 1.3rem!important;
+      width: 156px!important;
+      height: 126px!important;
     }
     .one-take {
       position: relative!important;
@@ -480,8 +482,8 @@
           <div class="col grid_one1">
               <div class="horizontal-width" onclick="location.href='payment/productDetails.html'">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food9.jpg" alt="Card image cap">
-                  <p class="card-text horizontal-postt"><b>Chicken-Pizza</b></p>
+                  <img class="card-img-top pen-to" src="assets/product/resturant2/r2.jpg" alt="Card image cap">
+                  <p class="card-text horizontal-postt"><b>Butter-Rice</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1500</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
               </div>
@@ -490,7 +492,7 @@
           <div class="col grid_two1">
               <div class="horizontal-width" onclick="location.href='payment/productDetails.html'">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food6.jpg" alt="Card image cap">
+                  <img class="card-img-top pen-to" src="assets/product/resturant2/p2.jpg" alt="Card image cap">
                   <p class="card-text horizontal-postt"><b>Thandoori-Pizza</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1800</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
@@ -503,7 +505,7 @@
           <div class="col grid_three1">
               <div class="horizontal-width">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food7.jpg" alt="Card image cap">
+                  <img class="card-img-top pen-to" src="assets/product/resturant2/b2.jpg" alt="Card image cap">
                   <p class="card-text horizontal-postt"><b>Devil-Pizza</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1900</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
@@ -513,7 +515,7 @@
           <div class="col grid_four1">
               <div class="horizontal-width">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food8.jpg" alt="Card image cap">
+                  <img class="card-img-top pen-to" src="assets/product/resturant2/n2.jpg" alt="Card image cap">
                   <p class="card-text horizontal-postt"><b>Black-Pizza</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1400</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
@@ -573,8 +575,8 @@
           <div class="col grid_one1">
               <div class="horizontal-width" onclick="location.href='payment/productDetails.html'">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food9.jpg" alt="Card image cap">
-                  <p class="card-text horizontal-postt"><b>Chicken-Pizza</b></p>
+                  <img class="card-img-top pen-to" src="assets/product/resturant3/r3.jpg" alt="Card image cap">
+                  <p class="card-text horizontal-postt"><b>Spicy-Rice</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1500</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
               </div>
@@ -583,7 +585,7 @@
           <div class="col grid_two1">
               <div class="horizontal-width" onclick="location.href='payment/productDetails.html'">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food6.jpg" alt="Card image cap">
+                  <img class="card-img-top pen-to" src="assets/product/resturant3/p3.jpg" alt="Card image cap">
                   <p class="card-text horizontal-postt"><b>Thandoori-Pizza</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1800</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
@@ -596,7 +598,7 @@
           <div class="col grid_three1">
               <div class="horizontal-width">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food7.jpg" alt="Card image cap">
+                  <img class="card-img-top pen-to" src="assets/product/resturant3/b3.jpg" alt="Card image cap">
                   <p class="card-text horizontal-postt"><b>Devil-Pizza</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1900</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
@@ -606,7 +608,7 @@
           <div class="col grid_four1">
               <div class="horizontal-width">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food8.jpg" alt="Card image cap">
+                  <img class="card-img-top pen-to" src="assets/product/resturant3/n3.jpg" alt="Card image cap">
                   <p class="card-text horizontal-postt"><b>Black-Pizza</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1400</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
@@ -666,7 +668,7 @@
           <div class="col grid_one1">
               <div class="horizontal-width" onclick="location.href='payment/productDetails.html'">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food9.jpg" alt="Card image cap">
+                  <img class="card-img-top pen-to" src="assets/product/resturant4/r4.jpg" alt="Card image cap">
                   <p class="card-text horizontal-postt"><b>Chicken-Pizza</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1500</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
@@ -676,7 +678,7 @@
           <div class="col grid_two1">
               <div class="horizontal-width" onclick="location.href='payment/productDetails.html'">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food6.jpg" alt="Card image cap">
+                  <img class="card-img-top pen-to" src="assets/product/resturant4/p4.jpg" alt="Card image cap">
                   <p class="card-text horizontal-postt"><b>Thandoori-Pizza</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1800</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
@@ -689,7 +691,7 @@
           <div class="col grid_three1">
               <div class="horizontal-width">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food7.jpg" alt="Card image cap">
+                  <img class="card-img-top pen-to" src="assets/product/resturant4/b4.jpg" alt="Card image cap">
                   <p class="card-text horizontal-postt"><b>Devil-Pizza</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1900</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
@@ -699,7 +701,7 @@
           <div class="col grid_four1">
               <div class="horizontal-width">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food8.jpg" alt="Card image cap">
+                  <img class="card-img-top pen-to" src="assets/product/resturant4/n4.jpg" alt="Card image cap">
                   <p class="card-text horizontal-postt"><b>Black-Pizza</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1400</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
@@ -759,7 +761,7 @@
           <div class="col grid_one1">
               <div class="horizontal-width" onclick="location.href='payment/productDetails.html'">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food9.jpg" alt="Card image cap">
+                  <img class="card-img-top pen-to" src="assets/product/resturant5/r5.jpeg" alt="Card image cap">
                   <p class="card-text horizontal-postt"><b>Chicken-Pizza</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1500</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
@@ -769,7 +771,7 @@
           <div class="col grid_two1">
               <div class="horizontal-width" onclick="location.href='payment/productDetails.html'">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food6.jpg" alt="Card image cap">
+                  <img class="card-img-top pen-to" src="assets/product/resturant5/p5.jpeg" alt="Card image cap">
                   <p class="card-text horizontal-postt"><b>Thandoori-Pizza</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1800</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
@@ -782,7 +784,7 @@
           <div class="col grid_three1">
               <div class="horizontal-width">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food7.jpg" alt="Card image cap">
+                  <img class="card-img-top pen-to" src="assets/product/resturant5/b5.jpg" alt="Card image cap">
                   <p class="card-text horizontal-postt"><b>Devil-Pizza</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1900</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
@@ -792,7 +794,7 @@
           <div class="col grid_four1">
               <div class="horizontal-width">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food8.jpg" alt="Card image cap">
+                  <img class="card-img-top pen-to" src="assets/product/resturant5/n5.jpg" alt="Card image cap">
                   <p class="card-text horizontal-postt"><b>Black-Pizza</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1400</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
@@ -852,7 +854,7 @@
           <div class="col grid_one1">
               <div class="horizontal-width" onclick="location.href='payment/productDetails.html'">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food9.jpg" alt="Card image cap">
+                  <img class="card-img-top pen-to" src="assets/product/resturant6/r6.jpeg" alt="Card image cap">
                   <p class="card-text horizontal-postt"><b>Chicken-Pizza</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1500</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
@@ -862,7 +864,7 @@
           <div class="col grid_two1">
               <div class="horizontal-width" onclick="location.href='payment/productDetails.html'">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food6.jpg" alt="Card image cap">
+                  <img class="card-img-top pen-to" src="assets/product/resturant6/p6.jpg" alt="Card image cap">
                   <p class="card-text horizontal-postt"><b>Thandoori-Pizza</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1800</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
@@ -875,7 +877,7 @@
           <div class="col grid_three1">
               <div class="horizontal-width">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food7.jpg" alt="Card image cap">
+                  <img class="card-img-top pen-to" src="assets/product/resturant6/b6.jpg" alt="Card image cap">
                   <p class="card-text horizontal-postt"><b>Devil-Pizza</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1900</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
@@ -885,7 +887,7 @@
           <div class="col grid_four1">
               <div class="horizontal-width">
               <div class="card border-changee penn " >
-                  <img class="card-img-top pen-to" src="assets/foods/food8.jpg" alt="Card image cap">
+                  <img class="card-img-top pen-to" src="assets/product/resturant6/n6.jpg" alt="Card image cap">
                   <p class="card-text horizontal-postt"><b>Black-Pizza</b></p>
                   <p class="card-text horizontal-post-two"><b>Rs 1400</b></p>
                   <img src="./assets/icons/Plus.png" class="one-take"/>
