--- a/profile.html
+++ b/profile.html
@@ -259,7 +259,7 @@
                     <ul>
                       <li><a target="_self" class="border"  data-transition="slide" href="home.html"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
                       <li><a target="_self" class="border ui-btn-active ui-state-persist"  data-transition="slide" href="profile.html"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
-                      <li><a target="_self" class="border"  data-transition="slide" href="cart.html"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
+                      <li><a target="_self" class="border"  data-transition="slide" href="./payment/cart-payment.html"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
                       <li><a target="_self" class="border"  data-transition="slide" href="./qr/index.html"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
                     </ul>
                 </div>
