--- a/favourite/share-favourite.html
+++ b/favourite/share-favourite.html
@@ -49,7 +49,7 @@
         <div class="ui-block-a">
             <label for="text-basic">
             <div class="ui-alt-icon">
-                <a onclick="location.href='../home.html'" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">Share Favourites</a>
+                <a onclick="location.href='favourite-list.html'" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">Share Favourites</a>
                 <div class="cart-description">Share Favourites</div>
             </div>
             </label>
@@ -71,7 +71,7 @@
         <ul>
           <li><a target="_self" class="border"  data-transition="slide" href="../home.html"><img src="../assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
           <li><a target="_self" class="border"  data-transition="slide" href="../profile.html"><img src="../assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
-          <li><a target="_self" class="border"  data-transition="slide" href="../cart.html"><img src="../assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
+          <li><a target="_self" class="border"  data-transition="slide" href="../payment/cart-payment.html"><img src="../assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
           <li><a target="_self" class="border"  data-transition="slide" href="../qr/index.html"><img src="../assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
         </ul>
     </div>
