--- a/home.html
+++ b/home.html
@@ -825,7 +825,9 @@
                 </div>
                 <div class="ui-grid-c top-magic">
                     <div class="ui-block-a">
-                        <img src="assets/icons/icon12.png" alt="Cart" class="man-image" onclick="location.href='review/review.html'" />
+                        <div onclick="location.href='review/review.html'">
+                        <div><img src="assets/icons/icon12.png" alt="Cart" class="man-image"  /><span class="rate"><b>4.2</b></span></div>
+                        </div>
                     </div>
                     <div class="ui-block-b">
                         <img src="assets/icons/icon13.jpg" alt="Cart" class="man-image" />
@@ -906,7 +908,9 @@
                 </div>
                 <div class="ui-grid-c top-magic">
                     <div class="ui-block-a">
-                        <img src="assets/icons/icon12.png" alt="Cart" class="man-image" onclick="location.href='review/review.html'" />
+                        <div onclick="location.href='review/review.html'">
+                        <div><img src="assets/icons/icon12.png" alt="Cart" class="man-image"  /><span class="rate"><b>4.2</b></span></div>
+                        </div>
                     </div>
                     <div class="ui-block-b">
                         <img src="assets/icons/icon13.jpg" alt="Cart" class="man-image" />
