--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
         };
     </script>
     <body>
-        <div data-role="page" id="foo">
+        <div data-role="page" id="home">
             <div class="p-1">
                 <div data-role="header" data-position="fixed">
                     <div class="ui-grid-a">
@@ -183,7 +183,7 @@
                         <div class="ui-block-a">
                             <label for="text-basic">
                                 <div class="ui-alt-icon">
-                                    <a onclick="location.href='home.html'" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">My Favourite</a>
+                                    <a onclick="location.href='#home'" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">My Favourite</a>
                                     <div class="cart-description">Restaurant View</div>
                                 </div>
                             </label>
@@ -285,7 +285,7 @@
                         <div class="ui-block-a">
                             <label for="text-basic">
                                 <div class="ui-alt-icon">
-                                    <a onclick="location.href='home.html'" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">My Favourite</a>
+                                    <a onclick="location.href='#home'" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">My Favourite</a>
                                     <div class="cart-description">Restaurant View</div>
                                 </div>
                             </label>
@@ -387,7 +387,7 @@
                         <div class="ui-block-a">
                             <label for="text-basic">
                                 <div class="ui-alt-icon">
-                                    <a onclick="location.href='home.html'" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">My Favourite</a>
+                                    <a onclick="location.href='#home'" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">My Favourite</a>
                                     <div class="cart-description">Restaurant View</div>
                                 </div>
                             </label>
@@ -489,7 +489,7 @@
                         <div class="ui-block-a">
                             <label for="text-basic">
                                 <div class="ui-alt-icon">
-                                    <a onclick="location.href='home.html'" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">My Favourite</a>
+                                    <a onclick="location.href='#home'" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">My Favourite</a>
                                     <div class="cart-description">Restaurant View</div>
                                 </div>
                             </label>
@@ -591,7 +591,7 @@
                         <div class="ui-block-a">
                             <label for="text-basic">
                                 <div class="ui-alt-icon">
-                                    <a onclick="location.href='home.html'" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">My Favourite</a>
+                                    <a onclick="location.href='#home'" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">My Favourite</a>
                                     <div class="cart-description">Restaurant View</div>
                                 </div>
                             </label>
@@ -693,7 +693,7 @@
                         <div class="ui-block-a">
                             <label for="text-basic">
                                 <div class="ui-alt-icon">
-                                    <a onclick="location.href='home.html'" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">My Favourite</a>
+                                    <a onclick="location.href='#home'" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">My Favourite</a>
                                     <div class="cart-description">Restaurant View</div>
                                 </div>
                             </label>
